--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">HalloweenCameraServer</string>
+    <string name="title_paired_devices">Paired Devices</string>
+    <string name="title_other_devices">Other Devices</string>
+    <string name="button_scan">Scan</string>
+    <string name="none_paired">None</string>
+    <string name="scanning">Scanning ...</string>
+    <string name="select_device">Select Device</string>
+    <string name="none_found">None found</string>
+    <string name="secure_connect">Secure Connection</string>
+    <string name="insecure_connect">Insecure Connect</string>
+    <string name="discoverable">Discoverable</string>
+    <string name="bt_not_enabled_leaving">BT Not Enabled. Exiting.</string>
 </resources>
